Simplifies HTTP/HTTPS usage. Now supports local integration on port 8080 always. Optionally adds support for HTTPS on port 8443 suitable for remote connectivity with external clients on their browser. Enhanced cert generation script Extensive rewrite of docs. Uses Mermaid diagrams instead of text charts. Made the button events more clear throughout the process flow Added trim gain for audio stream (client only)