@@ -2,721 +2,121 @@
 
 ## Overview
 
-This application is a **multi-user web-based controller** for a Processing.org visual sketch. Multiple users can connect via web browsers, interact with UI controls (touch areas, sliders, buttons), stream audio from their microphones, and their inputs are aggregated in real-time on a server-side Processing canvas.
+This application is a multi-user web controller for a Processing sketch running on the server machine. Browser clients connect to a Helidon application, interact with touch areas, sliders, and buttons, optionally stream microphone audio, and the server combines those inputs into one shared Processing canvas.
 
 ## Architecture Diagram
 
+This diagram shows the major runtime components and their structural relationships.
+
+```mermaid
+flowchart LR
+    subgraph Browser["Browser Client"]
+        UI["index.html UI"]
+        Touch["Touch Area"]
+        Sliders["Sliders"]
+        Buttons["Buttons"]
+        Audio["Microphone Capture"]
+        UI --> Touch
+        UI --> Sliders
+        UI --> Buttons
+        UI --> Audio
+    end
+
+    subgraph Channel["WebSocket Channel /ws"]
+        ControlStream["JSON control stream<br/>touch / sliders / buttons"]
+        AudioStream["Binary audio stream<br/>PCM audio frames"]
+    end
+
+    subgraph Server["Java Server (Helidon)"]
+        WSH["WebSocketHandler"]
+        API["InputService<br/>/api endpoints"]
+        Sessions["SessionManager"]
+        Queue["EventQueue"]
+        AudioBuffer["AudioBuffer"]
+        Sketch["ProcessingSketch<br/>shared canvas +<br/>audio-reactive visuals"]
+        API --> Sessions
+        API --> Queue
+        WSH --> Sessions
+        WSH --> Queue
+        WSH --> AudioBuffer
+        Queue --> Sketch
+        AudioBuffer --> Sketch
+        Sessions --> Sketch
+    end
+
+    Touch --> ControlStream
+    Sliders --> ControlStream
+    Buttons --> ControlStream
+    Audio --> AudioStream
+    ControlStream --> WSH
+    AudioStream --> WSH
 ```
-┌──────────────────────────────────────────────────────────────────────────────────┐
-│                              BROWSER (Client)                                     │
-│  ┌────────────────────────────────────────────────────────────────────────────┐   │
-│  │  index.html                                                                │   │
-│  │  ┌─────────────────┐  ┌─────────────────┐  ┌─────────────────┐            │   │
-│  │  │ Touch Area      │  │ Sliders        │  │ Buttons         │            │   │
-│  │  │ (x,y coords)    │  │ (value 0-1)    │  │ (action)        │            │   │
-│  │  └────────┬────────┘  └────────┬────────┘  └────────┬────────┘            │   │
-│  │           │                    │                    │                     │   │
-│  │           └────────────────────┼────────────────────┘                     │   │
-│  │                                │                                          │   │
-│  │  ┌─────────────────────────────▼─────────────────────────────────────┐    │   │
-│  │  │                     WebSocket Connection                           │    │   │
-│  │  │  wss://host/ws (HTTPS) - JSON events + binary audio                 │    │   │
-│  │  └────────────────────────────────┬────────────────────────────────────┘    │   │
-│  │                                 │                                          │   │
-│  │  ┌───────────────────────────────▼─────────────────────────────────────┐   │   │
-│  │  │                      Audio Capture                                   │   │   │
-│  │  │  navigator.mediaDevices.getUserMedia({audio: true})                 │   │   │
-│  │  │  AudioContext → AnalyserNode/ScriptProcessor                       │   │   │
-│  │  │  Sends PCM audio (16-bit, 44.1kHz stereo) as binary WebSocket       │   │   │
-│  │  └─────────────────────────────────────────────────────────────────────┘   │   │
-│  └────────────────────────────────────────────────────────────────────────────┘   │
-└─────────────────────────────────────────┬────────────────────────────────────────┘
-                                          │
-                                          │ WebSocket (real-time, bidirectional)
-                                          │ - JSON: touch, slider, button events
-                                          │ - Binary: PCM audio samples
-                                          │
-┌─────────────────────────────────────────▼────────────────────────────────────────┐
-│                           JAVA SERVER (Helidon 4.4)                               │
-│                                                                                   │
-│  ┌─────────────────┐   ┌─────────────────┐   ┌─────────────────┐                 │
-│  │ WebSocketHandler│   │  InputService   │   │  SessionManager │                 │
-│  │   /ws endpoint  │   │  /api endpoints │   │  (uuid->session) │                 │
-│  │                 │   │                 │   │                 │                 │
-│  │ - JSON events───────┼──► EventQueue   │   │                 │                 │
-│  │ - Binary audio───────┼──► AudioBuffer  │   │                 │                 │
-│  └────────┬────────┘   └────────┬────────┘   └────────┬────────┘                 │
-│           │                     │                     │                           │
-│           └─────────────────────┼─────────────────────┘                           │
-│                                 │                                                 │
-│           ┌─────────────────────┼─────────────────────┐                          │
-│           │                     │                     │                          │
-│           ▼                     ▼                     ▼                          │
-│  ┌─────────────────┐   ┌─────────────────┐   ┌─────────────────┐                 │
-│  │   EventQueue    │   │   AudioBuffer   │   │ SessionManager  │                 │
-│  │ (thread-safe)   │   │ (per-session)   │   │ (track users)   │                 │
-│  │ ConcurrentLinked│   │ Map<SessionId,  │   │                 │                 │
-│  │     Queue       │   │ Queue<byte[]>>  │   │                 │                 │
-│  └────────┬────────┘   └────────┬────────┘   └─────────────────┘                 │
-│           │                     │                                                 │
-│           │ poll()             │ poll() per session                             │
-│           ▼                     ▼                                                 │
-│  ┌─────────────────────────────────────────────────────────────────────────────┐│
-│  │                         ProcessingSketch                                     ││
-│  │  - Runs on separate Processing thread (60 FPS)                              ││
-│  │  - Processes all queued touch/slider/button events each frame               ││
-│  │  - Processes audio levels from ALL sessions (per-user visualization)       ││
-│  │  - Draws all users on shared canvas with audio-reactive circles            ││
-│  │                                                                             ││
-│  │  User Visualization:                                                        ││
-│  │  ┌─────────────────────────────────────────────────────────────┐            ││
-│  │  │                                                              │            ││
-│  │  │    ● User1 (audio level affects circle size)                │            ││
-│  │  │       ○ pulsing ring based on audio amplitude               │            ││
-│  │  │                                                              │            ││
-│  │  │              ● User2                                        │            ││
-│  │  │                 ○                                           │            ││
-│  │  │                                                              │            ││
-│  │  │   ● User3 (position initialized non-overlapping)            │            ││
-│  │  │      ○                                                      │            ││
-│  │  │                                                              │            ││
-│  │  └─────────────────────────────────────────────────────────────┘            ││
-│  │                                                                             ││
-│  │  ┌─────────────────────────────────────────────────────────────┐            ││
-│  │  │         Global Audio Meter (averaged across all users)      │            ││
-│  │  │         ▓▓▓▓▓▓▓▓▓▓▓▓▓▓░░░░░░░░░░░░░░░░░░░░░░░               │            ││
-│  │  └─────────────────────────────────────────────────────────────┘            ││
-│  └─────────────────────────────────────────────────────────────────────────────┘│
-│                                                                                   │
-└───────────────────────────────────────────────────────────────────────────────────┘
-```
+
+Key details:
+- The browser UI is served from `index.html` and exposes touch input, sliders, buttons, and microphone capture.
+- The browser uses one `/ws` connection, but that channel carries two logical streams in parallel: JSON control messages and binary audio frames.
+- `WebSocketHandler` separates those streams and forwards them to the correct server-side structures.
+- `ProcessingSketch` consumes the shared session, event, and audio state and renders the combined visual result.
 
 ---
 
 ## Data Flow
 
+This section shows the detailed runtime path for control input and microphone audio.
+
+```mermaid
+flowchart TD
+    A["User drags<br/>touch area"] --> B["Browser sends<br/>JSON over WebSocket"]
+    B --> C["WebSocketHandler<br/>.onMessage()"]
+    C --> D["Create<br/>UserInputEvent"]
+    D --> E["Push to<br/>EventQueue"]
+    E --> F["ProcessingSketch<br/>.draw()<br/>polls events"]
+    F --> G["Update user<br/>state"]
+    G --> H["Render updated<br/>circles on canvas"]
+```
+
+Key details:
+- Touch, slider, and button interactions are normalized in the browser before transmission.
+- JSON payloads identify the event type, control ID, normalized value, coordinates, and timestamp.
+- `WebSocketHandler.onMessage()` parses the payload and creates a `UserInputEvent`.
+- `ProcessingSketch.draw()` drains the queue once per frame and updates visual state before rendering.
+
 ### Touch/Slider/Button Events (JSON)
 
-```
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                        USER TOUCHES/MOVES MOUSE                               │
-└───────────────────────────────────┬──────────────────────────────────────────┘
-                                    │
-                                    ▼
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                   JavaScript touchmove/mousemove Handler                     │
-│                 Calculate normalized x,y (0.0 to 1.0)                         │
-└───────────────────────────────────┬──────────────────────────────────────────┘
-                                    │
-                                    ▼
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                        WebSocket.send(JSON)                                   │
-│      {"type":"touch","controlId":"touchArea","x":0.5,"y":0.7,...}           │
-└───────────────────────────────────┬──────────────────────────────────────────┘
-                                    │
-                                    │ Network (WebSocket frame)
-                                    │
-                                    ▼
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                     WebSocketHandler.onMessage()                              │
-│              Parse JSON → UserInputEvent → EventQueue.push()                 │
-└───────────────────────────────────┬──────────────────────────────────────────┘
-                                    │
-                                    │ Thread-safe queue insertion
-                                    │
-                                    ▼
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                              EventQueue                                       │
-│           [event1] → [event2] → [event3] → ...                              │
-└───────────────────────────────────┬──────────────────────────────────────────┘
-                                    │
-                                    │ poll() during frame render
-                                    │
-                                    ▼
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                       ProcessingSketch.draw()                                 │
-│        Update user position/color → Render circle at x,y                    │
-└──────────────────────────────────────────────────────────────────────────────┘
-```
+The browser normalizes touch or mouse coordinates to the `0.0` to `1.0` range, packages them with the control ID and timestamp, and sends them as JSON over the shared WebSocket. On the server side, `WebSocketHandler` parses that message into a `UserInputEvent` and pushes it into `EventQueue`, where it waits for the next `draw()` frame.
 
 ### Audio Stream (Binary)
 
-```
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                    USER GRANTS MICROPHONE ACCESS                             │
-│                   (requires HTTPS for mobile)                                │
-└───────────────────────────────────┬──────────────────────────────────────────┘
-                                    │
-                                    ▼
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                 AudioContext + getUserMedia({audio: true})                   │
-│                    Create AnalyserNode or ScriptProcessor                    │
-└───────────────────────────────────┬──────────────────────────────────────────┘
-                                    │
-                                    ▼
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                 onaudioprocess (or AnalyserNode.getFloatTimeDomainData)      │
-│             Convert Float32Array → Int16Array (PCM 16-bit)                  │
-│             Send as ArrayBuffer (binary) via WebSocket                       │
-└───────────────────────────────────┬──────────────────────────────────────────┘
-                                    │
-                                    │ Network (WebSocket binary frame)
-                                    │ ~44,100 samples/sec per user
-                                    │
-                                    ▼
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                  WebSocketHandler.onMessage(WsSession, BufferData)           │
-│              Extract sessionId → AudioBuffer.push(sessionId, byte[])        │
-└───────────────────────────────────┬──────────────────────────────────────────┘
-                                    │
-                                    │ Per-session queue insertion
-                                    │
-                                    ▼
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                              AudioBuffer                                      │
-│   ┌──────────┐  ┌──────────┐  ┌──────────┐                                  │
-│   │Session 1 │  │Session 2 │  │Session N │                                  │
-│   │[byte[][]]│  │[byte[][]]│  │[byte[][]]│                                  │
-│   └──────────┘  └──────────┘  └──────────┘                                  │
-└───────────────────────────────────┬──────────────────────────────────────────┘
-                                    │
-                                    │ poll(sessionId) per active session
-                                    │
-                                    ▼
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                       ProcessingSketch.processAudio()                         │
-│   For each session:                                                           │
-│     1. Poll audio bytes from AudioBuffer                                      │
-│     2. Convert to PCM samples (int16)                                         │
-│     3. Calculate RMS amplitude (0.0 to 1.0)                                   │
-│     4. Store per-user audio level for visualization                           │
-│     5. Average all levels for global audio meter                              │
-└───────────────────────────────────┬──────────────────────────────────────────┘
-                                    │
-                                    │ Update visual elements
-                                    │
-                                    ▼
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                         Visual Output                                         │
-│   - Each user's circle size scales with their audio level                    │
-│   - Pulsing ring around circle shows audio activity                           │
-│   - Global meter shows averaged audio across all users                        │
-│   - Position initialized to non-overlapping coordinates                       │
-└──────────────────────────────────────────────────────────────────────────────┘
+```mermaid
+flowchart TD
+    A["User grants<br/>microphone access"] --> B["Browser<br/>captures audio<br/>getUserMedia<br/>+ AudioContext"]
+    B --> C["Convert Float32<br/>samples to<br/>Int16 PCM"]
+    C --> D["Send binary<br/>WebSocket frames"]
+    D --> E["WebSocketHandler<br/>.onMessage<br/>(session, BufferData)"]
+    E --> F["AudioBuffer<br/>.push(sessionId, bytes)"]
+    F --> G["ProcessingSketch<br/>.processAudio()"]
+    G --> H["Calculate<br/>per-user levels<br/>and global meter"]
+    H --> I["Render<br/>audio-reactive visuals"]
 ```
 
----
-
-## Components
-
-### 1. Main.java — Application Entry Point
-
-**Location:** `src/main/java/com/processing/server/Main.java`
-
-```java
-public static void main(String[] args)
-```
-
-**Responsibilities:**
-1. Initialize logging (`LogConfig.configureRuntime()`)
-2. Load configuration from `application.yaml`
-3. Create shared singletons:
-   - `EventQueue` — thread-safe queue for user input events
-   - `SessionManager` — tracks connected users
-4. Start the Processing sketch (opens a window on the server machine)
-5. Create HTTP/WebSocket handlers
-6. Start Helidon web server
-
-**Configuration loaded from `application.yaml`:**
-- Server port (8080)
-- Processing canvas dimensions (800x600)
-- Static content settings
-
----
-
-### 2. SessionManager.java — User Session Tracking
-
-**Location:** `src/main/java/com/processing/server/SessionManager.java`
-
-**Purpose:** Track connected users and assign unique session IDs.
-
-```java
-public class SessionManager {
-    private final Map<String, SessionInfo> sessions = new ConcurrentHashMap<>();
-    
-    public String createSession();        // Returns new UUID
-    public boolean isActive(String id);   // Check if session exists
-    public void removeSession(String id); // Cleanup on disconnect
-    public int getActiveSessionCount();   // For status endpoint
-}
-```
-
-**Thread Safety:** Uses `ConcurrentHashMap` to safely handle concurrent WebSocket connections.
-
-**Key Fields in `SessionInfo` record:**
-- `sessionId` — UUID string
-- `createdAt` — timestamp for potential timeout logic
-
----
-
-### 3. EventQueue.java — Thread-Safe Event Buffer
-
-**Location:** `src/main/java/com/processing/server/EventQueue.java`
-
-**Purpose:** Bridge between HTTP threads and the Processing render thread.
-
-```java
-public class EventQueue {
-    private final Queue<UserInputEvent> queue = new ConcurrentLinkedQueue<>();
-    
-    public void push(UserInputEvent event);  // Called by WebSocket/HTTP handlers
-    public UserInputEvent poll();            // Called by Processing draw loop
-    public boolean isEmpty();
-    public int size();
-}
-```
-
-**Why `ConcurrentLinkedQueue`?**
-- Multiple HTTP threads can push events simultaneously
-- Single Processing thread polls events
-- Non-blocking, thread-safe, high performance
-
----
-
-### 4. UserInputEvent.java — Event Data Structure
-
-**Location:** `src/main/java/com/processing/server/UserInputEvent.java`
-
-```java
-public record UserInputEvent(
-    String sessionId,    // Which user sent this
-    String eventType,    // "touch", "slider", or "button"
-    String controlId,    // Which UI element (e.g., "sizeSlider")
-    float value,         // Slider value (0-1) or 0 for touch/button
-    float x,             // Touch X coordinate (normalized 0-1)
-    float y,             // Touch Y coordinate (normalized 0-1)
-    long timestamp       // When it occurred
-)
-```
-
-**Usage:**
-- Created from JSON in `WebSocketHandler` or `InputService`
-- Stored in `EventQueue`
-- Consumed by `ProcessingSketch`
-
----
-
-### 5. WebSocketHandler.java — Real-Time Input Channel
-
-**Location:** `src/main/java/com/processing/server/WebSocketHandler.java`
-
-**Purpose:** Handle persistent WebSocket connections from browser clients.
-
-**Lifecycle:**
-
-```
-Browser connects → onOpen() → Create session ID → Send welcome message
-                  ↓
-Browser sends JSON → onMessage() → Parse → Create UserInputEvent → Push to queue
-                  ↓
-Browser disconnects → onClose() → Remove session
-                  ↓
-Error occurs → onError() → Remove session
-```
-
-**Key Methods:**
-
-| Method | Purpose |
-|--------|---------|
-| `onOpen()` | Creates session, sends `{"type":"session","sessionId":"uuid"}` |
-| `onMessage()` | Parses JSON, creates `UserInputEvent`, pushes to queue |
-| `onClose()` | Removes session from `SessionManager` |
-| `onError()` | Cleanup on connection failure |
-
-**JSON Message Format from Client:**
-```json
-{
-  "type": "touch",      
-  "controlId": "touchArea",
-  "value": 0.5,         
-  "x": 0.3,             
-  "y": 0.7,
-  "timestamp": 1234567890
-}
-```
-
----
-
-### 6. InputService.java — REST API Endpoints
-
-**Location:** `src/main/java/com/processing/server/InputService.java`
-
-**Purpose:** Alternative HTTP REST interface (not used by the frontend, but available).
-
-| Endpoint | Method | Purpose |
-|----------|--------|---------|
-| `/api/event` | POST | Submit an event (requires valid sessionId) |
-| `/api/session` | POST | Create a new session |
-| `/api/session/{id}` | DELETE | Remove a session |
-| `/api/status` | GET | Get active sessions and queue size |
-
-**Example REST Event Submission:**
-```bash
-# Create session
-curl -X POST http://localhost:8080/api/session
-
-# Submit event
-curl -X POST http://localhost:8080/api/event \
-  -H "Content-Type: application/json" \
-  -d '{
-    "sessionId": "550e8400-e29b-41d4-a716-446655440000",
-    "eventType": "touch",
-    "controlId": "touchArea",
-    "value": 0,
-    "x": 0.5,
-    "y": 0.5,
-    "timestamp": 1234567890
-  }'
-```
-
----
-
-### 7. ProcessingSketch.java — Visual Output
-
-**Location:** `src/main/java/com/processing/server/ProcessingSketch.java`
-
-**Purpose:** The Processing canvas that displays aggregated user inputs.
-
-**extends `PApplet`** — Core Processing class providing:
-- `size(width, height)` — Canvas dimensions
-- `background(color)` — Clear screen
-- `ellipse(x, y, w, h)` — Draw circle
-- `fill(color)` — Set fill color
-- `text(str, x, y)` — Draw text
-
-#### Processing Lifecycle
-
-```java
-public class ProcessingSketch extends PApplet {
-    
-    @Override
-    void settings() {
-        // Called first - set canvas size
-        size(sketchWidth, sketchHeight);
-    }
-    
-    @Override
-    void setup() {
-        // Called once after settings()
-        frameRate(60);           
-        background(0);          
-        colorMode(HSB, 360, 100, 100);  
-    }
-    
-    @Override
-    void draw() {
-        // Called 60 times per second (target)
-        background(0);           
-        processEvents();         
-        drawUsers();             
-    }
-}
-```
-
-#### Audio Processing
-
-The server processes audio from ALL connected clients but does **not mix** the streams for playback. Instead, each client's audio level is tracked **independently** for visualization purposes.
-
-```java
-private void processAudio() {
-    globalAudioLevel = 0;
-    int totalSessions = 0;
-    
-    // Process each user's audio stream independently
-    for (String sessionId : audioBuffer.getActiveSessionIds()) {
-        float level = calculateAudioLevel(sessionId);
-        userAudioLevels.put(sessionId, new float[]{level});
-        
-        // Initialize visual representation for audio-only users
-        if (!userPositions.containsKey(sessionId)) {
-            initializeUser(sessionId);
-        }
-        
-        globalAudioLevel += level;
-        totalSessions++;
-    }
-    
-    // Calculate average for global audio meter
-    if (totalSessions > 0) {
-        globalAudioLevel /= totalSessions;
-    }
-    
-    // Smooth the global level for visual stability
-    smoothedGlobalAudioLevel = lerp(smoothedGlobalAudioLevel, globalAudioLevel, 0.3f);
-}
-```
-
-**Audio Level Calculation:**
-
-```java
-private float calculateAudioLevel(String sessionId) {
-    byte[] data = audioBuffer.poll(sessionId);
-    if (data == null) return previousLevel * 0.9f; // Decay
-    
-    // Data is 16-bit PCM, little-endian
-    float sum = 0;
-    int samples = data.length / 2;
-    
-    for (int i = 0; i < samples; i++) {
-        short sample = (short) ((data[i * 2] & 0xFF) | (data[i * 2 + 1] << 8));
-        sum += Math.abs(sample) / 32768.0f;
-    }
-    
-    return sum / samples; // Normalized 0.0 to 1.0
-}
-```
-
-**Why No Audio Mixing?**
-- Users connect from different locations with different microphones
-- Mixing would require synchronization, sample rate conversion, and buffering
-- Server visualization is the goal (showing each user's contribution)
-- No speakers needed on the server (visual output only)
-
-If you need audio playback, consider streaming mixed audio back to clients via WebRTC or Web Audio API.
-
-#### Event Processing
-
-```java
-private void processEvents() {
-    while (!eventQueue.isEmpty()) {
-        UserInputEvent event = eventQueue.poll();
-        if (event != null) {
-            handleEvent(event);
-        }
-    }
-}
-```
-
-**Important:** The queue is drained completely each frame. This ensures all user inputs are processed before rendering.
-
-```java
-private void handleEvent(UserInputEvent event) {
-    String sessionId = event.sessionId();
-    
-    switch (event.eventType()) {
-        case "touch" -> {
-            if (!userPositions.containsKey(sessionId)) {
-                initializeUser(sessionId);
-            }
-            float[] pos = userPositions.get(sessionId);
-            pos[0] = event.x();
-            pos[1] = event.y();
-        }
-        case "slider" -> {
-            if (!userColors.containsKey(sessionId)) {
-                initializeUser(sessionId);
-            }
-            float[] color = userColors.get(sessionId);
-            color[1] = map(event.value(), 0, 1, 20, 100);
-        }
-        case "button" -> {
-            if (!userColors.containsKey(sessionId)) {
-                initializeUser(sessionId);
-            }
-            float[] color = userColors.get(sessionId);
-            color[0] = (color[0] + 30) % 360;
-        }
-    }
-}
-```
-
-#### Drawing Users
-
-```java
-private void drawUsers() {
-    for (Map.Entry<String, float[]> entry : userPositions.entrySet()) {
-        String sessionId = entry.getKey();
-        float[] pos = entry.getValue();       
-        float[] color = userColors.getOrDefault(sessionId, new float[]{0, 50, 100});
-        
-        // Convert normalized coords to pixel coords
-        float pixelX = pos[0] * sketchWidth;
-        float pixelY = pos[1] * sketchHeight;
-        
-        // Draw circle with user's color
-        fill(color[0], color[1], color[2]);
-        noStroke();
-        ellipse(pixelX, pixelY, 30, 30);
-        
-        // Draw session ID prefix
-        fill(0);  
-        textAlign(CENTER, CENTER);
-        textSize(10);
-        text(sessionId.substring(0, 4), pixelX, pixelY);
-    }
-}
-```
-
-#### Data Structures
-
-| Map | Key | Value | Purpose |
-|-----|-----|-------|---------|
-| `userPositions` | sessionId | `[x, y]` normalized 0-1 | Last touch position |
-| `userColors` | sessionId | `[hue, saturation, brightness]` | User's circle color |
-
-#### Starting the Sketch
-
-```java
-public void runSketch() {
-    String[] args = {this.getClass().getName()};
-    PApplet.runSketch(args, this);  
-}
-```
-
-This runs the sketch in a **separate window** on the server machine, independent of the web server.
-
----
-
-### 8. index.html — Browser Client
-
-**Location:** `src/main/resources/static/index.html`
-
-**Served via:** `application.yaml` static-content configuration
-
-#### WebSocket Connection
-
-```javascript
-let ws;
-let sessionId = null;
-
-function connect() {
-    const wsUrl = 'ws://' + window.location.host + '/ws';
-    ws = new WebSocket(wsUrl);
-    
-    ws.onopen = () => {
-        // Connection established
-    };
-    
-    ws.onmessage = (event) => {
-        const data = JSON.parse(event.data);
-        if (data.type === 'session') {
-            sessionId = data.sessionId;  
-        }
-    };
-    
-    ws.onclose = () => {
-        setTimeout(connect, 2000);  
-    };
-}
-```
-
-#### Sending Events
-
-```javascript
-function sendEvent(type, controlId, value = 0, x = 0, y = 0) {
-    if (ws && ws.readyState === WebSocket.OPEN) {
-        const event = {
-            type: type,
-            controlId: controlId,
-            value: value,
-            x: x,
-            y: y,
-            timestamp: Date.now()
-        };
-        ws.send(JSON.stringify(event));
-    }
-}
-```
-
-#### Touch Area (x,y coordinates)
-
-```javascript
-touchArea.addEventListener('touchmove', handleTouch, { passive: false });
-
-function handleTouch(e) {
-    e.preventDefault();
-    const touch = e.touches[0];
-    const rect = touchArea.getBoundingClientRect();
-    const x = (touch.clientX - rect.left) / rect.width;   
-    const y = (touch.clientY - rect.top) / rect.height;
-    sendEvent('touch', 'touchArea', 0, x, y);
-}
-```
-
----
-
-## Data Flow Summary
-
-```
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                            USER TOUCHES SCREEN                                │
-└───────────────────────────────────┬──────────────────────────────────────────┘
-                                    │
-                                    ▼
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                        JavaScript Event Listener                              │
-│  touchArea.on('touchmove') → calculate normalized x,y (0-1)                  │
-└───────────────────────────────────┬──────────────────────────────────────────┘
-                                    │
-                                    ▼
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                          WebSocket.send(JSON)                                 │
-│  {"type":"touch","controlId":"touchArea","x":0.5,"y":0.7,...}                 │
-└───────────────────────────────────┬──────────────────────────────────────────┘
-                                    │
-                                    │ Network (WebSocket frame)
-                                    │
-                                    ▼
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                      WebSocketHandler.onMessage()                             │
-│  Parse JSON → Create UserInputEvent → eventQueue.push(event)                 │
-└───────────────────────────────────┬──────────────────────────────────────────┘
-                                    │
-                                    │ Concurrent queue insertion
-                                    │
-                                    ▼
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                              EventQueue                                       │
-│  ┌─────────────────────────────────────────────────────────────────────────┐ │
-│  │ [event1] → [event2] → [event3] → [event4] → ...                        │ │
-│  └─────────────────────────────────────────────────────────────────────────┘ │
-└───────────────────────────────────┬──────────────────────────────────────────┘
-                                    │
-                                    │ poll() during frame render
-                                    │
-                                    ▼
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                      ProcessingSketch.draw()                                   │
-│  1. background(0) - clear screen                                              │
-│  2. processEvents() - drain queue, update userPositions/userColors maps      │
-│  3. drawUsers() - render each user's circle at their position                │
-└───────────────────────────────────┬──────────────────────────────────────────┘
-                                    │
-                                    │ Swing/AWT rendering
-                                    │
-                                    ▼
-┌──────────────────────────────────────────────────────────────────────────────┐
-│                         PROCESSING WINDOW                                      │
-│  ┌───────────────────────────────────────────────────────────────────────┐    │
-│  │  ● user1    ● user2                                                   │    │
-│  │     (4f3a)     (7b2c)                                                  │    │
-│  │                                                                        │    │
-│  │                  ● user3                                              │    │
-│  │                     (9d1e)                                             │    │
-│  └───────────────────────────────────────────────────────────────────────┘    │
-└──────────────────────────────────────────────────────────────────────────────┘
-```
+Key details:
+- Browser microphone access depends on user permission and usually requires HTTPS for non-local access.
+- Audio samples are converted from browser float samples to 16-bit PCM before being sent as binary frames.
+- `AudioBuffer` stores queued audio per session so the sketch can process each participant independently.
+- The sketch computes per-user levels plus a global meter and uses them to drive the reactive visuals.
 
 ---
 
 ## Configuration
 
-### application.yaml
+### Base Config: `src/main/resources/application.yaml`
+
+The base configuration is the local-development profile. It serves the browser UI over HTTP on `127.0.0.1:8080` and does not expose HTTPS unless an overlay is supplied at runtime.
 
 ```yaml
 server:
   port: 8080
-  host: "0.0.0.0"
+  host: "127.0.0.1"
   features:
     static-content:
       classpath:
@@ -729,54 +129,251 @@ processing:
   height: 600
   fps: 60
 
-app:
-  greeting: "Hello"
+audio:
+  mode: "high-quality-stereo"
+  buffer-size: 2048
+  max-buffer-chunks: 20
+
+debug:
+  logging: false
 ```
 
 | Setting | Purpose |
 |---------|---------|
-| `server.port` | HTTP/WebSocket port |
-| `server.host` | `"0.0.0.0"` binds all interfaces (allows network access) |
+| `server.port` | Local HTTP and WebSocket port |
+| `server.host` | `127.0.0.1` keeps the default listener local-only |
 | `static-content.classpath` | Serves `src/main/resources/static/` at `/` |
 | `processing.width/height` | Canvas dimensions |
 | `processing.fps` | Target frame rate |
+| `audio.mode` | Selects the sample rate/channel profile used by the audio pipeline |
+| `audio.buffer-size` | Sets the PCM chunk size used in the audio path |
+| `audio.max-buffer-chunks` | Caps queued audio per session so stale audio cannot grow unbounded |
+| `debug.logging` | Enables extra server-side logging for diagnostics |
+
+### HTTPS Overlay: `config/application-https.yaml`
+
+HTTPS is enabled with a runtime overlay passed as `-Dapp.config=config/application-https.yaml`. The overlay only contributes the optional TLS socket and related keystore settings.
+
+```yaml
+server:
+  sockets:
+    tls:
+      port: 8443
+      host: "0.0.0.0"
+      tls:
+        private-key:
+          keystore:
+            passphrase: "changeit"
+            type: "PKCS12"
+            resource:
+              path: "keystore.p12"
+        private-key-cert-chain:
+          keystore:
+            passphrase: "changeit"
+            type: "PKCS12"
+            resource:
+              path: "keystore.p12"
+```
+
+This keeps local HTTP simple while allowing the same packaged jar to expose HTTPS for LAN and mobile clients when needed.
+
+---
+
+## Components
+
+### 1. Main.java - Application Entry Point
+
+Responsibilities:
+- Loads the base config and optional `app.config` overlay.
+- Constructs shared services such as `SessionManager`, `EventQueue`, and `AudioBuffer`.
+- Starts the Processing sketch and then starts Helidon.
+- Wires static content, REST routes, WebSocket routes, and the optional TLS socket.
+
+Runtime orchestration details:
+- The sketch starts before the server begins accepting traffic so the Processing window is ready when clients connect.
+- The same process serves the browser assets, REST inspection endpoints, and the `/ws` real-time channel.
+- Control events and audio frames share one WebSocket route, but they diverge into separate buffers after parsing.
+
+### 2. SessionManager.java - Browser Session Registry
+
+Responsibilities:
+- Creates and tracks session IDs for connected browser clients.
+- Stores per-session metadata needed by the server and sketch.
+- Removes session state when sockets close or error out.
+
+Why it matters:
+- The sketch needs stable session IDs so each client keeps its own position, color, and audio state.
+- Audio buffers and queued events are keyed by session, so disconnect cleanup must stay consistent.
+
+### 3. EventQueue.java - Thread-Safe Event Buffer
+
+Responsibilities:
+- Accepts `UserInputEvent` objects from concurrent network handlers.
+- Buffers those events until the Processing animation thread consumes them.
+- Preserves a clean producer/consumer boundary between Helidon threads and the sketch thread.
+
+Why it matters:
+- It is the thread-safe handoff point between concurrent network handlers and the single Processing render loop.
+- It allows frequent touch, slider, and button updates without directly mutating sketch-owned state from outside `draw()`.
+
+### 4. AudioBuffer.java - Per-Session Audio Queue
+
+Responsibilities:
+- Stores binary PCM chunks per session.
+- Limits buffered audio so stale audio does not accumulate indefinitely.
+- Gives the sketch a way to poll and process microphone data independently for each client.
+
+Why it matters:
+- Control events are discrete and low bandwidth, while audio is continuous and much higher volume.
+- Keeping audio separate from the control-event queue makes buffering and cleanup simpler.
+
+### 5. WebSocketHandler.java - Real-Time Input Channel
+
+Responsibilities:
+- Owns the `/ws` connection lifecycle.
+- Creates or associates the session for each connection.
+- Routes JSON control messages to `EventQueue`.
+- Routes binary audio frames to `AudioBuffer`.
+- Broadcasts shutdown notices and cleans up sessions on close or error.
+
+Transport model:
+- Each browser uses one persistent `/ws` connection.
+- Text frames carry JSON control messages for touch, sliders, buttons, and client-side state updates.
+- Binary frames carry raw PCM audio captured from the browser microphone path.
+- The handler keeps session cleanup and disconnect behavior in one place so the sketch does not have to reason about socket lifecycle directly.
+
+### 6. InputService.java - REST API Endpoints
+
+Responsibilities:
+- Exposes inspection endpoints such as `/api/status`.
+- Provides a simpler HTTP entry point for diagnostics and automation.
+- Reports queue, session, and audio-buffer state without requiring a WebSocket client.
+
+Relationship to WebSocket input:
+- REST is not the main real-time control path for the browser UI.
+- The browser uses WebSocket for low-latency control and microphone streaming.
+- `/api/status` is mainly useful for debugging whether sessions, queued events, or audio streams are reaching the server.
+
+### 7. ProcessingSketch.java - Visual Output and Interaction Model
+
+Responsibilities:
+- Owns the Processing window and render loop.
+- Drains queued input events inside `draw()`.
+- Polls per-session audio data and computes visual audio levels.
+- Maintains the user state maps used to render circles, colors, animation, and audio-reactive rings.
+
+Audio pipeline details:
+- Incoming PCM is converted into per-user levels on the server side rather than streamed back to the browser.
+- The audio gain slider changes how strongly the incoming PCM contributes to those visual levels.
+- The sketch also maintains a global meter derived from the aggregate activity across connected users.
+
+Event semantics:
+- Touch and drag events update target positions rather than snapping immediately to the current draw position.
+- The speed slider controls how quickly circles move toward those targets and how fast temporary effects decay.
+- Buttons trigger short-lived visual behaviors such as burst, spin color, and scatter.
+
+Visual model details:
+- Each session owns a core circle plus an outer audio-reactive ring.
+- The size slider changes the core circle size, and the outer ring scales proportionally from that base.
+- All sketch-owned state is mutated on the Processing animation thread so drawing stays deterministic.
+
+### 8. index.html - Browser Client
+
+Responsibilities:
+- Renders the control UI and status text.
+- Opens the shared WebSocket connection and reconnects when needed.
+- Captures pointer, slider, button, and microphone input.
+- Displays disconnect or shutdown banners when the server goes away.
+
+Connection details:
+- The browser uses HTTP for page delivery and a matching `ws://` or `wss://` WebSocket for real-time input.
+- Shutdown or disconnect banners scroll the page to the top so users can see the message even if they were interacting lower on the page.
+- The page distinguishes a clean server shutdown notice from an unexpected disconnect.
+
+Control event details:
+- Touch and mouse positions are normalized before transmission so the sketch stays resolution-independent.
+- Slider values are sent as numeric updates keyed by control ID.
+- Button events are discrete JSON messages rather than long-lived state.
+
+#### Audio Capture
+
+```javascript
+const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
+```
+
+Audio capture details:
+- Browser audio capture depends on user permission and, for non-local access, HTTPS.
+- The client converts floating-point browser samples into 16-bit PCM frames before sending them over the WebSocket.
+- The browser audio meter is local feedback only; the sketch reacts to the server-processed audio stream.
+
+---
+
+## Data Flow Summary
+
+This diagram shows how control events, audio frames, and REST requests move through the system at runtime.
+
+```mermaid
+flowchart LR
+    Browser["Browser Client"] --> Static["Static assets"]
+    Browser --> REST["REST /api/status"]
+    Browser --> Channel["WebSocket Channel /ws"]
+
+    subgraph Streams["Shared WebSocket Stream"]
+        Json["JSON control stream"]
+        Binary["Binary audio stream"]
+    end
+
+    Channel --> Json
+    Channel --> Binary
+    Json --> Queue["EventQueue"]
+    Binary --> AudioBuffer["AudioBuffer"]
+    REST --> InputService["InputService"]
+    InputService --> Sessions["SessionManager"]
+    Queue --> Sketch["ProcessingSketch"]
+    AudioBuffer --> Sketch
+    Sessions --> Sketch
+    Static --> BrowserUI["index.html"]
+```
+
+Key details:
+- Static assets load over ordinary HTTP or HTTPS before the browser opens the WebSocket.
+- REST stays separate from the shared `/ws` channel and is mainly used for status and debugging.
+- JSON control events and binary audio travel in parallel over the same socket connection but are handled by different server-side queues.
+- The sketch consumes both streams during its frame loop and renders the combined result in one shared Processing window.
 
 ---
 
 ## Threading Model
 
-```
-┌────────────────────────────────────────────────────────────────┐
-│                     JVM PROCESS                                │
-│                                                                │
-│  ┌──────────────────────┐    ┌──────────────────────────────┐ │
-│  │  Helidon WebServer   │    │   Processing Thread         │ │
-│  │  (virtual threads)   │    │   (PApplet animation thread) │ │
-│  │                      │    │                              │ │
-│  │  HTTP handlers       │    │  setup() → runs once         │ │
-│  │  WebSocket handlers  │    │  draw()  → loops 60 FPS     │ │
-│  │                      │    │                              │ │
-│  │  - Many concurrent  │    │  - Single thread             │ │
-│  │    connections       │    │  - Accesses EventQueue      │ │
-│  │  - Push to queue     │    │  - Polls and processes      │ │
-│  │                      │    │    events                   │ │
-│  └──────────┬───────────┘    └──────────────┬───────────────┘ │
-│             │                                │                 │
-│             │        EventQueue              │                 │
-│             │   (ConcurrentLinkedQueue)      │                 │
-│             │                                │                 │
-│             └──────────────┬─────────────────┘                 │
-│                            │                                   │
-│                            ▼                                   │
-│                   Thread-safe handoff                          │
-│                                                                │
-└────────────────────────────────────────────────────────────────┘
+```mermaid
+flowchart LR
+    subgraph JVM["JVM Process"]
+        subgraph Helidon["Helidon WebServer"]
+            HTTP["HTTP handlers"]
+            WS["WebSocket handlers"]
+        end
+        Queue["EventQueue<br/>ConcurrentLinkedQueue"]
+        subgraph Processing["Processing Thread"]
+            Setup["setup() runs once"]
+            Draw["draw() loops<br/>at configured FPS"]
+        end
+        HTTP --> Queue
+        WS --> Queue
+        Queue --> Draw
+        Setup --> Draw
+    end
 ```
 
-**Thread Safety:**
-- `EventQueue` — `ConcurrentLinkedQueue` handles concurrent push/poll
-- `SessionManager` — `ConcurrentHashMap` for session storage
-- `ProcessingSketch` — Only the Processing thread modifies `userPositions` and `userColors`
+Key details:
+- Helidon request handling is concurrent and hands work off to thread-safe shared structures.
+- `EventQueue` is the handoff point between network-facing handlers and the single Processing animation thread.
+- `setup()` runs once and `draw()` loops continuously.
+- Sketch-owned visual state is only mutated on the Processing animation thread.
+
+**Thread safety:**
+- `EventQueue` uses `ConcurrentLinkedQueue` for concurrent push/poll.
+- `SessionManager` uses `ConcurrentHashMap` for session storage.
+- `ProcessingSketch` owns the mutable visual state maps and updates them only inside the Processing thread.
 
 ---
 
@@ -784,312 +381,243 @@ app:
 
 ### Add a New Event Type
 
-1. **Frontend (index.html):**
+1. Frontend in `index.html`:
+
 ```javascript
 document.getElementById('newControl').addEventListener('input', (e) => {
     sendEvent('newType', 'newControlId', e.target.value / 100);
 });
 ```
 
-2. **Backend (ProcessingSketch.java):**
+2. Backend in `ProcessingSketch.java`:
+
 ```java
 case "newType" -> {
     // Handle your new event type
-    userSomething.computeIfAbsent(sessionId, k -> new float[]{0});
-    // Update state based on event
 }
 ```
+
+The general rule is:
+- browser UI emits a JSON control message
+- `WebSocketHandler` parses it into a `UserInputEvent`
+- `ProcessingSketch` applies it inside `draw()`
 
 ### Add a New REST Endpoint
 
 In `InputService.java`:
+
 ```java
 @Override
 public void routing(HttpRules rules) {
     rules
         .post("/event", this::handleEvent)
-        .get("/newEndpoint", this::newHandler);  
+        .get("/newEndpoint", this::newHandler);
 }
 
 private void newHandler(ServerRequest req, ServerResponse res) {
-    // Your logic here
     res.send("response");
 }
 ```
 
+Use REST for status, diagnostics, or tooling-oriented calls. Use WebSocket for low-latency interaction.
+
 ### Stream Video Back to Clients
 
-You would need to:
-1. Use a library like `webcam-capture` or JavaCV
-2. Capture Processing canvas frames
-3. Encode as JPEG/WebP
-4. Stream via WebSocket or MJPEG endpoint
+That would require:
+1. Capturing Processing canvas frames.
+2. Encoding them to an image or video format.
+3. Delivering them over WebSocket, WebRTC, or an HTTP streaming endpoint.
+
+That is intentionally outside the current architecture, which only sends control input from the browser to the sketch.
 
 ---
 
 ## HTTPS/TLS Configuration
 
-The server uses HTTPS (TLS) to enable secure WebSocket connections (`wss://`), which is required for browser microphone access from mobile devices and remote clients.
+The server uses HTTPS to enable secure WebSocket connections (`wss://`), which are required for browser microphone access from mobile devices and remote clients.
 
 ### Why HTTPS?
 
-1. **Browser Security Requirements**: Modern browsers require HTTPS for:
-   - `getUserMedia()` (microphone/camera access)
-   - Secure WebSocket connections (`wss://`)
-   - Service Workers and other advanced features
+Browsers require secure contexts for:
+- `getUserMedia()` microphone access
+- secure WebSocket connections (`wss://`)
+- reliable cross-device access from phones and tablets
 
-2. **Mobile Device Support**: Mobile browsers will only grant microphone access over HTTPS
+Local same-machine testing can stay on plain HTTP at `http://localhost:8080/`.
 
 ### Keystore Structure
 
-The server uses a PKCS12 keystore (`keystore.p12`) containing:
+The server uses a PKCS12 keystore, `keystore.p12`, at the project root. It contains:
+- a self-signed CA certificate
+- a server certificate signed by that CA
+- SAN entries for `localhost`, `127.0.0.1`, the current LAN IP, and `hostname.local`
 
-1. **CA Certificate** (`root-ca`): A self-signed Certificate Authority used to sign the server certificate
-2. **Server Certificate** (`1`): A certificate signed by the CA, with Subject Alternative Names (SAN) for:
-   - `DNS:localhost`
-   - `IP:127.0.0.1`
-   - `IP:192.168.1.100` (or your local network IP)
-
-**Important**: The server certificate must have a proper certificate chain (server cert → CA cert). A simple self-signed certificate without a CA chain will cause TLS handshake failures in Helidon.
+The certificate chain matters. A plain self-signed leaf certificate without the CA chain is not enough for the intended Helidon TLS setup.
 
 ### Creating the Keystore
 
-Run these commands from the project root directory:
+Use the project scripts instead of manually running `keytool` commands:
 
 ```powershell
-# Set JAVA_HOME if needed
-$env:JAVA_HOME = "C:\Program Files\Java\jdk-25"  # or jdk-21 minimum
-
-# 1. Create CA certificate (valid for 10 years)
-keytool -genkeypair -alias root-ca -keyalg RSA -keysize 2048 -validity 3650 `
-    -keystore keystore.p12 -storetype PKCS12 -storepass changeit `
-    -dname "CN=ProcessingServer-CA,O=Dev,C=US" `
-    -ext BasicConstraints:critical,ca:true,pathlen:1
-
-# 2. Create server key (valid for 1 year)
-keytool -genkeypair -alias "1" -keyalg RSA -keysize 2048 -validity 365 `
-    -keystore keystore.p12 -storetype PKCS12 -storepass changeit `
-    -dname "CN=localhost,O=Dev,C=US" `
-    -ext SAN="DNS:localhost,IP:127.0.0.1,IP:192.168.1.100"
-
-# 3. Generate certificate signing request (CSR) for server
-keytool -certreq -alias "1" -keystore keystore.p12 -storetype PKCS12 `
-    -storepass changeit -file server.csr
-
-# 4. Sign server certificate with CA
-keytool -gencert -alias root-ca -keystore keystore.p12 -storetype PKCS12 `
-    -storepass changeit -infile server.csr -outfile server.cer -validity 365 `
-    -ext SAN="DNS:localhost,IP:127.0.0.1,IP:192.168.1.100"
-
-# 5. Import signed certificate back into keystore
-keytool -importcert -alias "1" -keystore keystore.p12 -storetype PKCS12 `
-    -storepass changeit -file server.cer
-
-# 6. Export CA certificate
-keytool -exportcert -alias root-ca -keystore keystore.p12 -storetype PKCS12 `
-    -storepass changeit -file ca.cer
-
-# 7. Remove root-ca as private key entry and re-import as trusted certificate
-keytool -delete -alias root-ca -keystore keystore.p12 -storetype PKCS12 `
-    -storepass changeit
-keytool -importcert -alias root-ca -file ca.cer -keystore keystore.p12 `
-    -storetype PKCS12 -storepass changeit -noprompt
-
-# 8. Clean up temporary files
-del server.csr, server.cer, ca.cer
-
-# 9. Verify the keystore
-keytool -list -keystore keystore.p12 -storetype PKCS12 -storepass changeit
+.\create-keystore.ps1
+.\create-keystore.ps1 192.168.1.100
+.\create-keystore.ps1 -Force
 ```
 
-**Expected output:**
-```
-Keystore type: PKCS12
-Keystore provider: SUN
-
-Your keystore contains 2 entries
-
-1, <date>, PrivateKeyEntry, 
-Certificate fingerprint (SHA-256): ...
-root-ca, <date>, trustedCertEntry, 
-Certificate fingerprint (SHA-256): ...
+```bash
+./create-keystore.sh
+./create-keystore.sh 192.168.1.100
+./create-keystore.sh --force
 ```
 
-### Copy Keystore to Resources
-
-After creating the keystore, copy it to the resources directory:
-
-```powershell
-Copy-Item keystore.p12 src\main\resources\keystore.p12
-```
+The scripts generate the CA and server certificate chain, write `keystore.p12` at the project root, and export `processing-server-ca.cer` alongside it.
 
 ### TLS Configuration in Code
 
-The TLS is configured programmatically in `Main.java`:
+The server reads socket configuration from Helidon config. The base config enables local HTTP, and the optional overlay contributes the `server.sockets.tls` subtree.
 
-```java
-WebServer server = WebServer.builder()
-        .config(config.get("server"))
-        .tls(tls -> tls
-            .privateKey(key -> key
-                .keystore(store -> store
-                    .passphrase("changeit")
-                    .keystore(Resource.create("keystore.p12"))))
-            .privateKeyCertChain(key -> key
-                .keystore(store -> store
-                    .passphrase("changeit")
-                    .keystore(Resource.create("keystore.p12")))))
-        .routing(builder -> routing(builder, inputService))
-        .addRouting(WsRouting.builder().endpoint("/ws", () -> wsHandler))
-        .build()
-        .start();
-```
-
-**Key points:**
-- `privateKey`: References the keystore containing the server's private key
-- `privateKeyCertChain`: References the same keystore to get the certificate chain
-- Both use `Resource.create("keystore.p12")` to load from classpath
-- The keystore must contain both the server cert AND the CA cert as a trusted entry
+Key points:
+- local HTTP remains on `127.0.0.1:8080`
+- optional LAN/mobile HTTPS lives in `config/application-https.yaml`
+- HTTPS is enabled at runtime with `-Dapp.config=config/application-https.yaml`
+- the `/ws` endpoint is attached on both the default HTTP listener and the optional `tls` listener
+- the keystore is external to the jar, so regenerating it does not require a rebuild
 
 ### Testing TLS
 
 You can verify the TLS setup with OpenSSL:
 
 ```powershell
-# Start the server first
-.\run.ps1
-
-# Test TLS connection (from Git Bash or WSL)
-openssl s_client -connect localhost:8080 -showcerts
+.\run-https.ps1
+openssl s_client -connect localhost:8443 -showcerts
 ```
 
-**Expected output:**
-```
-Certificate chain
- 0 s:CN=localhost, O=Dev, C=US
-   i:CN=ProcessingServer-CA, O=Dev, C=US
-   ...
- 1 s:CN=ProcessingServer-CA, O=Dev, C=US
-   i:CN=ProcessingServer-CA, O=Dev, C=US
-   ...
-```
+You should see the server certificate followed by the local CA certificate in the reported chain.
 
 ### Browser Certificate Warning
 
-When accessing the server from a browser, you'll see a security warning because:
-- The CA certificate is self-signed (not trusted by browser/Certificate Authorities)
-- This is expected for development/testing
+Browsers will warn until the exported CA certificate is trusted on the client device. For local development that is expected.
 
-**To proceed:**
-1. Click "Advanced" on the warning page
-2. Click "Proceed to localhost (unsafe)" or similar
-3. The browser will remember this exception for future visits
-
-**For production:** Use certificates from a trusted Certificate Authority like Let's Encrypt, DigiCert, or similar.
+Typical flow:
+1. Generate the keystore.
+2. Trust `processing-server-ca.cer` on the test device.
+3. Visit `https://YOUR_IP:8443/` or `https://YOUR_HOSTNAME.local:8443/`.
 
 ### Changing the IP Address
 
-The server certificate includes your local IP address in the Subject Alternative Name (SAN) extension. If your laptop connects to a different network, your IP will likely change, causing certificate validation errors.
+If the machine moves to a different network, the LAN IP in the SAN may no longer match. In that case:
+1. regenerate the keystore with the new IP
+2. restart with `.\run-https.ps1` or `./run-https.sh`
 
-**Current behavior:** You must regenerate the keystore when your IP changes.
-
-**Workarounds:**
-
-1. **Regenerate keystore** (current approach):
-   ```powershell
-   .\create-keystore.ps1  # auto-detects new IP
-   Copy-Item keystore.p12 src\main\resources\keystore.p12
-   mvn package -DskipTests
-   ```
-
-2. **Use hostname instead of IP** (requires script modification):
-   
-   Add `HOSTNAME.local` to the SAN extension in `create-keystore.ps1`:
-   ```powershell
-   $Hostname = "$env:COMPUTERNAME.local"
-   -ext "SAN=DNS:localhost,DNS:$Hostname,IP:127.0.0.1,IP:$LocalIP"
-   ```
-   
-   Then connect via: `https://YOURHOSTNAME.local:8080/`
-   
-   Works on most networks with mDNS/Bonjour (Windows 10+, macOS, Linux with avahi).
-
-3. **Accept browser warnings** (not recommended for classrooms).
-
-4. **Use a real domain with Let's Encrypt** (production).
+Using `hostname.local` can reduce how often clients need to use the raw IP address, but it still depends on local name resolution support.
 
 ### Changing the Password
 
-To use a different keystore password, update:
-1. The keystore commands (replace `changeit` with your password)
-2. `Main.java` - update the `passphrase("changeit")` calls
+If you change the keystore password, update:
+- the keystore generation scripts
+- the keystore settings in `config/application-https.yaml`
 
 ---
 
 ## Running the Application
 
 ### Prerequisites
-- Java 21 minimum (Java 25+ recommended for best performance)
+
+- Java 21 minimum, Java 25+ recommended
 - Maven 3.9+
 
 ### Build
+
 ```powershell
-$env:JAVA_HOME = "C:\Program Files\Java\jdk-25"  # or jdk-21 minimum
-cd C:\Users\ed\Dev\processing-server
-mvn package -DskipTests
+$env:JAVA_HOME = "C:\Program Files\Java\jdk-25"
+mvn clean package -DskipTests
 ```
 
 ### Run
+
+Local HTTP:
+
 ```powershell
 .\run.ps1
 ```
 
-Or manually:
+Optional HTTPS:
+
 ```powershell
-$env:JAVA_HOME = "C:\Program Files\Java\jdk-25"  # or jdk-21 minimum
-java --enable-preview -cp "target\classes;target\libs\*" com.processing.server.Main
+.\create-keystore.ps1 192.168.1.100
+.\run-https.ps1
 ```
 
-### Access
-- **Local UI:** https://localhost:8080/
-- **Local API:** https://localhost:8080/api/status
-- **Mobile/Remote:** https://192.168.1.100:8080/ (replace with your IP, accept certificate warning)
-- **WebSocket:** wss://localhost:8080/ws (secured)
+Manual launch is also supported:
 
-**Note:** 
-- The server uses HTTPS with a self-signed CA certificate
-- Mobile devices will prompt to accept the certificate
-- Microphone access requires HTTPS (required for browser security)
+```powershell
+java -jar .\target\processing-server-1.0-SNAPSHOT.jar
+java -Dapp.config=config/application-https.yaml -jar .\target\processing-server-1.0-SNAPSHOT.jar
+```
+
+### Packaging Tradeoff
+
+This project intentionally builds an executable shaded jar instead of using the thinner Helidon example layout used by `processing-client`.
+
+- `processing-client` stays closer to the stock example structure, where runtime dependencies are managed as a separate layout.
+- `processing-server` builds a single runnable jar so users can launch it with `java -jar`.
+- The downside is a larger artifact and the usual shade-plugin warnings about overlapping resources and metadata.
+- The upside is a much simpler launch flow for a desktop-style runnable application.
+
+For this project, the simpler launch flow is the more important tradeoff.
+
+### Access
+
+- Local UI: `http://localhost:8080/`
+- Local API: `http://localhost:8080/api/status`
+- LAN/mobile UI: `https://YOUR_HOSTNAME.local:8443/` or `https://YOUR_IP:8443/`
+- WebSocket: `ws://localhost:8080/ws` locally, `wss://YOUR_HOSTNAME.local:8443/ws` or `wss://YOUR_IP:8443/ws` over HTTPS
+
+Notes:
+- local development uses HTTP by default
+- the optional HTTPS socket uses a self-signed local CA
+- mobile devices typically require HTTPS for microphone access
 
 ---
 
 ## File Structure
 
-```
+The TLS keystore lives at the project root, and HTTPS is enabled through `config/application-https.yaml` plus `-Dapp.config=...` at launch time.
+
+```text
 processing-server/
-├── pom.xml                              # Maven build configuration
-├── ARCHITECTURE.md                      # This file
-├── run.ps1                              # PowerShell run script
-├── keystore.p12                         # SSL certificate (self-signed)
-├── src/
-│   └── main/
-│       ├── java/com/processing/server/
-│       │   ├── Main.java                # Entry point, server setup, TLS config
-│       │   ├── ProcessingSketch.java    # Processing canvas
-│       │   ├── EventQueue.java          # Thread-safe event queue
-│       │   ├── SessionManager.java      # User session tracking
-│       │   ├── UserInputEvent.java      # Event data record
-│       │   ├── InputService.java        # REST API handlers
-│       │   ├── WebSocketHandler.java    # WebSocket handler
-│       │   ├── AudioBuffer.java         # Per-session audio queue
-│       │   ├── AudioConfig.java         # Audio configuration record
-│       │   └── DebugConfig.java         # Debug logging flag
-│       └── resources/
-│           ├── application.yaml         # Configuration
-│           ├── keystore.p12            # SSL certificate (copy)
-│           └── static/
-│               └── index.html           # Web UI
-└── target/
-    ├── classes/                         # Compiled classes
-    └── libs/                             # Dependencies
+|-- pom.xml                           # Maven build configuration
+|-- README.md                         # Getting started guide
+|-- ARCHITECTURE.md                   # This file
+|-- CUSTOMIZATION.md                  # Customization guide
+|-- TODO.md                           # Follow-up tasks and ideas
+|-- CHANGELOG.md                      # Project change history
+|-- run.ps1                           # PowerShell run script
+|-- run.sh                            # Bash run script
+|-- run-https.ps1                     # PowerShell HTTPS launch script
+|-- run-https.sh                      # Bash HTTPS launch script
+|-- create-keystore.ps1               # Windows keystore generator
+|-- create-keystore.sh                # Bash keystore generator
+|-- keystore.p12                      # Generated TLS keystore
+|-- processing-server-ca.cer          # Exported CA certificate
+|-- config/
+|   `-- application-https.yaml        # HTTPS overlay config for -Dapp.config
+|-- src/
+|   `-- main/
+|       |-- java/com/processing/server/
+|       |   |-- Main.java             # Entry point, config loading, route setup
+|       |   |-- ProcessingSketch.java # Processing canvas and visual behavior
+|       |   |-- WebSocketHandler.java # WebSocket lifecycle and control/audio ingress
+|       |   |-- InputService.java     # REST API handlers
+|       |   |-- SessionManager.java   # User session tracking
+|       |   |-- EventQueue.java       # Thread-safe event queue
+|       |   |-- AudioBuffer.java      # Per-session audio queue
+|       |   |-- AudioConfig.java      # Audio configuration record
+|       |   |-- DebugConfig.java      # Debug logging flag
+|       |   `-- UserInputEvent.java   # Event data record
+|       `-- resources/
+|           |-- application.yaml      # Base local HTTP config
+|           `-- static/
+|               `-- index.html        # Browser UI
+`-- target/                           # Build output created after the first Maven build
 ```
