@@ -71,159 +71,63 @@ git clone <repository-url> processing-server
 cd processing-server
 ```
 
-### 2. Create SSL Certificate
+### 2. Try It Locally Over HTTP
 
-HTTPS is required for mobile microphone access. Create a self-signed certificate using the provided script:
+No certificate is required for local testing on this machine.
 
 **Windows (PowerShell):**
 ```powershell
-# Auto-detect your local IP
+.\run.ps1
+```
+
+**Mac/Linux (Bash):**
+```bash
+./run.sh
+```
+
+Open [http://localhost:8080](http://localhost:8080).
+
+### 3. Enable HTTPS for LAN or Mobile Browsers
+
+HTTPS is only needed when you want to connect from another device on your LAN, especially for browser microphone access.
+
+**Windows (PowerShell):**
+```powershell
+# Auto-detect your local IP and write keystore.p12 to the project root
 .\create-keystore.ps1
 
 # Or specify your IP manually
 .\create-keystore.ps1 192.168.1.100
+
+# Use -Force to overwrite an existing keystore
+.\create-keystore.ps1 -Force
 ```
 
 **Mac/Linux (Bash):**
 ```bash
-# Make the script executable (first time only)
 chmod +x create-keystore.sh
 
-# Auto-detect your local IP
+# Auto-detect your local IP and write keystore.p12 to the project root
 ./create-keystore.sh
 
 # Or specify your IP manually
 ./create-keystore.sh 192.168.1.100
+
+# Use --force to overwrite an existing keystore
+./create-keystore.sh --force
 ```
 
 **What the script does:**
-1. Creates a Certificate Authority (CA) certificate (valid for 10 years)
-2. Creates a server certificate signed by the CA (valid for 1 year)
-3. Adds Subject Alternative Names (SAN) for:
-   - `DNS:localhost`
-   - `IP:127.0.0.1`
-   - `IP:YOUR_LOCAL_IP` (for mobile/remote access)
-4. Generates `keystore.p12` with proper certificate chain
+1. Writes `keystore.p12` to the project root.
+2. Exports the CA certificate as `processing-server-ca.cer`.
+3. Adds SAN entries for `localhost`, `127.0.0.1`, your current LAN IP, and `hostname.local`.
+4. Leaves local HTTP unchanged and enables HTTPS only when you launch with the HTTPS config overlay.
 
-**Manual Creation (if script doesn't work):**
-
-<details>
-<summary>Click to expand manual keystore creation steps</summary>
-
-**Windows (PowerShell):**
-```powershell
-# Set JAVA_HOME if needed
-$env:JAVA_HOME = "C:\Program Files\Java\jdk-25"  # or jdk-21 minimum
-
-# 1. Create CA certificate (valid for 10 years)
-keytool -genkeypair -alias root-ca -keyalg RSA -keysize 2048 -validity 3650 `
-    -keystore keystore.p12 -storetype PKCS12 -storepass changeit `
-    -dname "CN=ProcessingServer-CA,O=Dev,C=US" `
-    -ext BasicConstraints:critical,ca:true,pathlen:1
-
-# 2. Create server key (valid for 1 year)
-# Replace 192.168.1.100 with YOUR local network IP
-keytool -genkeypair -alias "1" -keyalg RSA -keysize 2048 -validity 365 `
-    -keystore keystore.p12 -storetype PKCS12 -storepass changeit `
-    -dname "CN=localhost,O=Dev,C=US" `
-    -ext SAN="DNS:localhost,IP:127.0.0.1,IP:192.168.1.100"
-
-# 3. Generate certificate signing request
-keytool -certreq -alias "1" -keystore keystore.p12 -storetype PKCS12 `
-    -storepass changeit -file server.csr
-
-# 4. Sign server certificate with CA
-keytool -gencert -alias root-ca -keystore keystore.p12 -storetype PKCS12 `
-    -storepass changeit -infile server.csr -outfile server.cer -validity 365 `
-    -ext SAN="DNS:localhost,IP:127.0.0.1,IP:192.168.1.100"
-
-# 5. Import signed certificate
-keytool -importcert -alias "1" -keystore keystore.p12 -storetype PKCS12 `
-    -storepass changeit -file server.cer
-
-# 6. Export CA certificate
-keytool -exportcert -alias root-ca -keystore keystore.p12 -storetype PKCS12 `
-    -storepass changeit -file ca.cer
-
-# 7. Convert CA to trusted certificate entry
-keytool -delete -alias root-ca -keystore keystore.p12 -storetype PKCS12 `
-    -storepass changeit
-keytool -importcert -alias root-ca -file ca.cer -keystore keystore.p12 `
-    -storetype PKCS12 -storepass changeit -noprompt
-
-# 8. Clean up temporary files
-del server.csr, server.cer, ca.cer
-
-# 9. Verify keystore (should show 2 entries: "1" and "root-ca")
-keytool -list -keystore keystore.p12 -storetype PKCS12 -storepass changeit
-```
-
-**Mac/Linux (Bash):**
-```bash
-# Set JAVA_HOME if needed
-export JAVA_HOME=/usr/lib/jvm/jdk-25  # or jdk-21 minimum  # adjust as needed
-
-# 1. Create CA certificate (valid for 10 years)
-keytool -genkeypair -alias root-ca -keyalg RSA -keysize 2048 -validity 3650 \
-    -keystore keystore.p12 -storetype PKCS12 -storepass changeit \
-    -dname "CN=ProcessingServer-CA,O=Dev,C=US" \
-    -ext BasicConstraints:critical,ca:true,pathlen:1
-
-# 2. Create server key (valid for 1 year)
-# Replace 192.168.1.100 with YOUR local network IP
-keytool -genkeypair -alias "1" -keyalg RSA -keysize 2048 -validity 365 \
-    -keystore keystore.p12 -storetype PKCS12 -storepass changeit \
-    -dname "CN=localhost,O=Dev,C=US" \
-    -ext SAN="DNS:localhost,IP:127.0.0.1,IP:192.168.1.100"
-
-# 3. Generate certificate signing request
-keytool -certreq -alias "1" -keystore keystore.p12 -storetype PKCS12 \
-    -storepass changeit -file server.csr
-
-# 4. Sign server certificate with CA
-keytool -gencert -alias root-ca -keystore keystore.p12 -storetype PKCS12 \
-    -storepass changeit -infile server.csr -outfile server.cer -validity 365 \
-    -ext SAN="DNS:localhost,IP:127.0.0.1,IP:192.168.1.100"
-
-# 5. Import signed certificate
-keytool -importcert -alias "1" -keystore keystore.p12 -storetype PKCS12 \
-    -storepass changeit -file server.cer
-
-# 6. Export CA certificate
-keytool -exportcert -alias root-ca -keystore keystore.p12 -storetype PKCS12 \
-    -storepass changeit -file ca.cer
-
-# 7. Convert CA to trusted certificate entry
-keytool -delete -alias root-ca -keystore keystore.p12 -storetype PKCS12 \
-    -storepass changeit
-keytool -importcert -alias root-ca -file ca.cer -keystore keystore.p12 \
-    -storetype PKCS12 -storepass changeit -noprompt
-
-# 8. Clean up temporary files
-rm server.csr server.cer ca.cer
-
-# 9. Verify keystore (should show 2 entries: "1" and "root-ca")
-keytool -list -keystore keystore.p12 -storetype PKCS12 -storepass changeit
-```
-
-</details>
-
-**Finding your local IP:**
-- **Windows:** `ipconfig` (look for IPv4 Address under your active network adapter)
-- **Mac:** `ipconfig getifaddr en0` (for Wi-Fi) or System Preferences → Network
-- **Linux:** `hostname -I` or `ip addr`
-
-### 3. Copy Keystore to Resources
-
-**Windows (PowerShell):**
-```powershell
-Copy-Item keystore.p12 src\main\resources\keystore.p12
-```
-
-**Mac/Linux (Bash):**
-```bash
-cp keystore.p12 src/main/resources/keystore.p12
-```
+**To turn HTTPS on:**
+1. Run one of the keystore scripts.
+2. Trust `processing-server-ca.cer` on the devices that will use the HTTPS URL.
+3. Start the server with `.\run-https.ps1` or `./run-https.sh`.
+4. Open `https://<hostname>.local:8443/` or `https://<LAN-IP>:8443/`.
 
 ### 4. Build the Project
 
@@ -239,6 +143,12 @@ export JAVA_HOME=/usr/lib/jvm/jdk-25  # or jdk-21 minimum  # adjust as needed
 mvn clean package -DskipTests
 ```
 
+**Packaging note:**
+- This project intentionally builds an executable shaded jar so it can be launched with `java -jar target/processing-server-<version>.jar`
+- That differs from the stock Helidon example layout in `processing-client`, which follows the thinner `target/libs` runtime pattern
+- The tradeoff is a larger packaged jar and more shading warnings during build in exchange for a simpler launch experience for users
+- For this application, that tradeoff is intentional because the app is used more like a runnable desktop/server tool than a minimal framework example
+
 ### 5. Run the Server
 
 **Option A: Using shell script**
@@ -253,18 +163,32 @@ mvn clean package -DskipTests
 ./run.sh
 ```
 
+**Option A2: Using shell script with HTTPS**
+
+*Windows (PowerShell):*
+```powershell
+.\run-https.ps1
+```
+
+*Mac/Linux (Bash):*
+```bash
+./run-https.sh
+```
+
 **Option B: Using Maven**
 
 *Windows (PowerShell):*
 ```powershell
 $env:JAVA_HOME = "C:\Program Files\Java\jdk-25"  # or jdk-21 minimum
-mvn exec:java
+mvn package -DskipTests
+java -jar .\target\processing-server-1.0-SNAPSHOT.jar
 ```
 
 *Mac/Linux (Bash):*
 ```bash
 export JAVA_HOME=/usr/lib/jvm/jdk-25  # or jdk-21 minimum
-mvn exec:java
+mvn package -DskipTests
+java -jar ./target/processing-server-1.0-SNAPSHOT.jar
 ```
 
 **Option C: Using Java directly**
@@ -272,72 +196,78 @@ mvn exec:java
 *Windows (PowerShell):*
 ```powershell
 $env:JAVA_HOME = "C:\Program Files\Java\jdk-25"  # or jdk-21 minimum
-java --enable-preview -cp "target\classes;target\libs\*" com.processing.server.Main
+java -jar .\target\processing-server-1.0-SNAPSHOT.jar
 ```
 
 *Mac/Linux (Bash):*
 ```bash
 export JAVA_HOME=/usr/lib/jvm/jdk-25  # or jdk-21 minimum
-java --enable-preview -cp "target/classes:target/libs/*" com.processing.server.Main
+java -jar ./target/processing-server-1.0-SNAPSHOT.jar
 ```
 
 ### 6. Access the Application
 
 | Access Point | URL |
 |--------------|-----|
-| **Local UI** | https://localhost:8080/ |
-| **Local API** | https://localhost:8080/api/status |
-| **Mobile/Remote** | https://YOUR_IP:8080/ |
-| **WebSocket** | wss://localhost:8080/ws |
+| **Local UI** | http://localhost:8080/ |
+| **Local API** | http://localhost:8080/api/status |
+| **LAN/Mobile UI** | https://YOUR_HOSTNAME.local:8443/ or https://YOUR_IP:8443/ |
+| **WebSocket** | ws://localhost:8080/ws locally, wss://YOUR_IP:8443/ws over HTTPS |
 
-**First-time access:**
-1. Browser will show a security warning (self-signed certificate)
-2. Click "Advanced" → "Proceed to localhost (unsafe)"
-3. The browser will remember this exception
+**First-time local access:**
+1. Open `http://localhost:8080/`
+2. No certificate is required for same-machine testing
 
 **Mobile device access:**
-1. Find your computer's local IP
-2. On mobile, navigate to `https://YOUR_IP:8080/`
-3. Accept the certificate warning
+1. Generate the keystore and trust `processing-server-ca.cer`
+2. Start the server with `.\run-https.ps1` or `./run-https.sh`
+4. On mobile, navigate to `https://YOUR_IP:8443/` or `https://YOUR_HOSTNAME.local:8443/`
+5. Accept the certificate warning if the CA is not yet trusted
 
 ## Project Structure
 
-```
+The keystore lives at the project root, and HTTPS is enabled through `config/application-https.yaml` plus `-Dapp.config=...` at launch time.
+
+```text
 processing-server/
-├── pom.xml                          # Maven configuration
-├── README.md                        # This file (getting started)
-├── ARCHITECTURE.md                  # Detailed architecture documentation
-├── CUSTOMIZATION.md                 # Guide for modifying and extending
-├── run.ps1                          # PowerShell run script (Windows)
-├── run.sh                           # Bash run script (Mac/Linux)
-├── create-keystore.ps1              # PowerShell keystore generator (Windows)
-├── create-keystore.sh               # Bash keystore generator (Mac/Linux)
-├── keystore.p12                     # SSL certificate (created by script)
-│
-├── src/
-│   └── main/
-│       ├── java/com/processing/server/
-│       │   ├── Main.java            # Entry point, HTTPS setup
-│       │   ├── ProcessingSketch.java # Visual canvas (Processing)
-│       │   ├── WebSocketHandler.java # WebSocket connection handler
-│       │   ├── InputService.java    # REST API endpoints
-│       │   ├── SessionManager.java  # User session tracking
-│       │   ├── EventQueue.java      # Thread-safe event queue
-│       │   ├── AudioBuffer.java     # Per-session audio buffering
-│       │   ├── AudioConfig.java     # Audio configuration
-│       │   ├── DebugConfig.java     # Debug logging settings
-│       │   └── UserInputEvent.java  # Event data structure
-│       │
-│       └── resources/
-│           ├── application.yaml     # Server configuration
-│           ├── keystore.p12         # SSL certificate (copy of root)
-│           └── static/
-│               └── index.html       # Browser UI
-│
-└── target/
-    ├── classes/                     # Compiled Java classes
-    └── libs/                        # Dependency JARs
+|-- pom.xml                           # Maven configuration
+|-- README.md                         # This file
+|-- ARCHITECTURE.md                   # Detailed architecture documentation
+|-- CUSTOMIZATION.md                  # Guide for modifying and extending
+|-- TODO.md                           # Follow-up tasks and ideas
+|-- run.ps1                           # PowerShell run script
+|-- run.sh                            # Bash run script
+|-- run-https.ps1                     # PowerShell HTTPS launch script
+|-- run-https.sh                      # Bash HTTPS launch script
+|-- create-keystore.ps1               # PowerShell keystore generator
+|-- create-keystore.sh                # Bash keystore generator
+|-- keystore.p12                      # Generated TLS keystore
+|-- processing-server-ca.cer          # Exported CA certificate
+|-- config/
+|   `-- application-https.yaml        # HTTPS overlay config for -Dapp.config
+|-- src/
+|   `-- main/
+|       |-- java/com/processing/server/
+|       |   |-- Main.java             # Entry point and socket configuration
+|       |   |-- ProcessingSketch.java # Processing canvas behavior
+|       |   |-- WebSocketHandler.java # WebSocket session and message handling
+|       |   |-- InputService.java     # REST API endpoints
+|       |   |-- SessionManager.java   # User session tracking
+|       |   |-- EventQueue.java       # Thread-safe event queue
+|       |   |-- AudioBuffer.java      # Per-session audio buffering
+|       |   |-- AudioConfig.java      # Audio configuration
+|       |   |-- DebugConfig.java      # Debug logging settings
+|       |   `-- UserInputEvent.java   # Event data structure
+|       `-- resources/
+|           |-- application.yaml      # Default local HTTP configuration
+|           `-- static/
+|               `-- index.html        # Browser UI
+`-- target/
+    |-- classes/                      # Compiled Java classes
+    `-- libs/                         # Dependency JARs
 ```
+
+`target/` is created by Maven after the first build. It is not part of the files cloned from GitHub.
 
 ## Configuration
 
@@ -381,12 +311,12 @@ Edit `application.yaml` or pass system property:
 
 **Windows (PowerShell):**
 ```powershell
-java --enable-preview -Dserver.port=9090 -cp "target\classes;target\libs\*" com.processing.server.Main
+java -Dserver.port=9090 -jar .\target\processing-server-1.0-SNAPSHOT.jar
 ```
 
 **Mac/Linux (Bash):**
 ```bash
-java --enable-preview -Dserver.port=9090 -cp "target/classes:target/libs/*" com.processing.server.Main
+java -Dserver.port=9090 -jar ./target/processing-server-1.0-SNAPSHOT.jar
 ```
 
 ### Changing Audio Quality
@@ -403,17 +333,18 @@ audio:
 The web interface (`index.html`) provides:
 
 1. **Touch Area**: Drag to move your circle on the canvas
-2. **Size Slider**: Adjust circle size
-3. **Speed Slider**: Adjust animation speed  
-4. **Action Buttons**: Trigger visual effects
-5. **Audio Input**: Stream microphone audio (requires HTTPS)
+2. **Size Slider**: Adjust the core circle size while keeping the outer audio ring proportional
+3. **Speed Slider**: Adjust movement responsiveness and the decay speed of temporary effects
+4. **Action Buttons**: `Burst`, `Spin Color`, and `Scatter` trigger visual effects
+5. **Audio Input**: Start or stop microphone audio (HTTPS is required for mobile and remote browsers)
+6. **Audio Gain Slider**: Attenuate or amplify how strongly incoming audio drives the sketch
 
 ### Enabling Debug Mode
 
 Add `?debug` to the URL:
 
 ```
-https://localhost:8080/?debug
+http://localhost:8080/?debug
 ```
 
 This enables console logging in the browser.
@@ -430,9 +361,9 @@ This enables console logging in the browser.
 
 ### WebSocket Endpoint
 
-Connect to `wss://localhost:8080/ws`
+Connect to `ws://localhost:8080/ws` for local HTTP, or `wss://localhost:8443/ws` when launched with `-Dapp.config=config/application-https.yaml`.
 
-**Server → Client Messages:**
+**Server â†’ Client Messages:**
 
 ```json
 {
@@ -441,7 +372,14 @@ Connect to `wss://localhost:8080/ws`
 }
 ```
 
-**Client → Server Messages:**
+```json
+{
+  "type": "server-shutdown",
+  "reason": "Processing Server is shutting down."
+}
+```
+
+**Client â†’ Server Messages:**
 
 ```json
 {
@@ -487,33 +425,53 @@ netstat -tulpn | grep 8080
 ### "SSL handshake failure" / "Can't connect"
 
 Ensure:
-1. Keystore exists: `keystore.p12` in project root
-2. Keystore copied to: `src/main/resources/keystore.p12`
+1. `keystore.p12` exists in the project root
+2. The server was started with `.\run-https.ps1`, `./run-https.sh`, or `-Dapp.config=config/application-https.yaml`
 3. Keystore has proper structure (CA + signed server cert)
 4. Server started successfully (check console output)
 
 **Verify TLS is working:**
 
 ```powershell
-# Test REST endpoint (accept self-signed cert with -k)
-curl -k https://localhost:8080/api/status
+# Local HTTP
+curl http://localhost:8080/api/status
+
+# Optional HTTPS socket when started with the HTTPS config overlay
+curl -k https://localhost:8443/api/status
 ```
 
 ```bash
-# Mac/Linux - test TLS handshake
-curl -k https://localhost:8080/api/status
+# Local HTTP
+curl http://localhost:8080/api/status
+
+# Optional HTTPS socket
+curl -k https://localhost:8443/api/status
 
 # View certificate details
-openssl s_client -connect localhost:8080 -showcerts
+openssl s_client -connect localhost:8443 -showcerts
 ```
 
 Expected output: JSON with `activeSessions`, `queueSize`, etc.
 
 If curl fails with SSL error, the keystore is malformed. Regenerate with `create-keystore.ps1`.
 
+### "Session ID: connecting..." or controls do nothing
+
+- Confirm the page is using the matching WebSocket URL for its current scheme
+- Use `ws://localhost:8080/ws` for local HTTP or `wss://<host>:8443/ws` for HTTPS
+- Check `http://localhost:8080/api/status` or `https://localhost:8443/api/status`
+- If the page is open and connected, `activeSessions` should be greater than `0`
+
+### "The browser says the server disconnected"
+
+- On a clean shutdown, the server sends a final `server-shutdown` WebSocket message before closing connections
+- The browser shows a banner and scrolls back to the top so the notice is visible
+- On an unexpected disconnect, the browser also shows a banner and attempts to reconnect
+
 ### "Microphone not working on mobile"
 
 - Must use HTTPS (not HTTP)
+- Local `http://localhost:8080` works on the same machine but not for mobile microphone access
 - Must accept certificate warning
 - Browser requires user gesture before microphone access
 
@@ -522,7 +480,7 @@ If curl fails with SSL error, the keystore is malformed. Regenerate with `create
 - Check browser console for errors
 - Verify HTTPS is active
 - Try manual audio start: click "Start Audio" button
-- Check debug output: `https://localhost:8080/?debug`
+- Check debug output: `http://localhost:8080/?debug`
 
 ### "Users initialize on same position"
 
@@ -579,21 +537,15 @@ The keystore certificate includes your local IP address in the Subject Alternati
 1. **Regenerate keystore** (current approach):
    ```powershell
    .\create-keystore.ps1  # auto-detects new IP
-   Copy-Item keystore.p12 src\main\resources\keystore.p12
-   mvn package -DskipTests
-   ./run.ps1
+   .\run-https.ps1
    ```
 
-2. **Use hostname instead of IP** (requires script modification):
-   
-   Add `HOSTNAME.local` to the SAN extension in `create-keystore.ps1`:
-   ```powershell
-   $Hostname = "$env:COMPUTERNAME.local"
-   -ext "SAN=DNS:localhost,DNS:$Hostname,IP:127.0.0.1,IP:$LocalIP"
-   ```
-   
-   Then connect via: `https://YOURHOSTNAME.local:8080/`
-   
+2. **Use hostname instead of IP**:
+
+   The keystore scripts already include `HOSTNAME.local` in the SAN list.
+
+   Then connect via: `https://YOURHOSTNAME.local:8443/`
+
    Works on most networks with mDNS/Bonjour (Windows 10+, macOS, Linux with avahi).
 
 3. **Accept browser warnings** (not recommended for classrooms):
@@ -637,12 +589,12 @@ Or via system property:
 
 **Windows (PowerShell):**
 ```powershell
-java --enable-preview -Ddebug.logging=true -cp "target\classes;target\libs\*" com.processing.server.Main
+java -Ddebug.logging=true -jar .\target\processing-server-1.0-SNAPSHOT.jar
 ```
 
 **Mac/Linux (Bash):**
 ```bash
-java --enable-preview -Ddebug.logging=true -cp "target/classes:target/libs/*" com.processing.server.Main
+java -Ddebug.logging=true -jar ./target/processing-server-1.0-SNAPSHOT.jar
 ```
 
 ## Architecture
@@ -691,3 +643,4 @@ Now that you have the server running:
 - [Processing Foundation](https://processing.org/) - Visual arts programming
 - [Helidon](https://helidon.io/) - Lightweight Java web framework
 - [Oracle](https://www.oracle.com/java/) - Java Development Kit
+
